# sdl2-game-of-life

./: CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
src/: Backtrace.cpp  CMakeLists.txt  Cell.cpp  Cell.h  Exception.h  GameConfig.h  GameState.cpp  GameState.h  GameWindow.cpp  GameWindow.h  GofLApp.cpp  GofLApp.h  main.cpp
